--- a/Translaytor/Properties/Resources.resx
+++ b/Translaytor/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Microsoft-Translator-Header-620x250" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\bin\Debug\Microsoft-Translator-Header-620x250.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Microsoft-Translator-Header-620x2501" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Microsoft-Translator-Header-620x250.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
